--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,35 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath rootProject.ext.plugin.androidPlugin
+        classpath rootProject.ext.plugin.retroLambda
+        classpath rootProject.ext.plugin.androidApt
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion rootProject.ext.config.compileSdkVersion
+    buildToolsVersion rootProject.ext.config.buildToolsVersion
+
+    lintOptions {
+        abortOnError false
+    }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 
     defaultConfig {
         applicationId "com.active.sunnypoint"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion rootProject.ext.config.minSdkVersion
+        targetSdkVersion rootProject.ext.config.compileSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -17,10 +39,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    // Configure for RetroLambda
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.0.0'
+
     compile project(':widget')
+    def dependency = rootProject.ext.dependency
+
+    compile dependency.appcompatv7
+    compile dependency.recyclerviewv7
+
+    // Inject dependencies
+    compile dependency.dagger2
+    apt dependency.dagger2Compiler
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    // View Inject dependencies
+    compile dependency.butterknife
+
+    // Log
+    compile dependency.timber
+
+    // RxAndroid
+    compile dependency.rxAndroid
+
+    // ImageLoader
+    compile dependency.picasso
+
+    compile dependency.otto
+
+    compile dependency.gson
+    compile dependency.retrofit
 }
