--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,7 @@ buildscript {
 
 allprojects {
     repositories {
-//        jcenter()
-        mavenCentral()
-        maven{
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
+        jcenter()
     }
 }
 ext {
@@ -24,9 +20,10 @@ ext {
     retroLambdaVersion = '2.4.1'
     androidAptVersion = '1.4'
 
-    androidSupportVersion = '22.0.0'
-    dagger2Version = '2.0-SNAPSHOT'
+    androidSupportVersion = '21.0.3'
+    daggerVersion = '1.2.2'
     butterKnifeVerion = '6.1.0'
+    prettySharedPreferencesVersion = '1.0.2'
     timberVersion = '2.2.+'
     picassoVersion = '2.5.2'
     gsonVersion = '2.3.1'
@@ -36,6 +33,7 @@ ext {
     rxAndroidVersion = '0.24.0'
     rxJavaVersion = '1.0.0'
     espressoCoreVersion = '2.0'
+    testingSupportLibVersion = '0.1'
     ottoVersion = '1.3.6'
 
     // Configuration.
@@ -60,12 +58,15 @@ ext {
             gridlayoutv7           : "com.android.support:gridlayout-v7:${androidSupportVersion}",
             recyclerviewv7         : "com.android.support:recyclerview-v7:${androidSupportVersion}",
 
-            //Dagger2 Dependencies Injection.
-            dagger2                 : "com.google.dagger:dagger:${dagger2Version}",
-            dagger2Compiler         : "com.google.dagger:dagger-compiler:${dagger2Version}",
+            // Dependencies Injection.
+            dagger                 : "com.squareup.dagger:dagger:${daggerVersion}",
+            daggerCompiler         : "com.squareup.dagger:dagger-compiler:${daggerVersion}",
 
             // View injection.
             butterknife            : "com.jakewharton:butterknife:${butterKnifeVerion}",
+
+            // SharedPreferences helper.
+            prettySharedPreferences: "com.github.talenguyen:prettysharedpreferences:${prettySharedPreferencesVersion}",
 
             // Logging
             timber                 : "com.jakewharton.timber:timber:${timberVersion}",
@@ -80,6 +81,8 @@ ext {
             okhttp                 : "com.squareup.okhttp:okhttp:${okhttpVersion}",
             rxAndroid              : "io.reactivex:rxandroid:${rxAndroidVersion}",
             rxJava                 : "io.reactivex:rxjava:${rxJavaVersion}",
+            espressoCore           : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
+            testingSupportLib      : "com.android.support.test:testing-support-lib:${testingSupportLibVersion}",
             otto                   : "com.squareup:otto:${ottoVersion}",
     ]
 }
