--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ android {
     }
     // Configure for RetroLambda
     compileOptions {
+        encoding "UTF-8"
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    compileOptions.encoding = 'ISO-8859-1'
 }
 
 dependencies {
